--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
   <link href="https://fonts.googleapis.com/css2?family=Nunito:wght@200;400;700&display=swap" rel="stylesheet">
   <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
   <link rel="stylesheet" href="./styles/hamburgers.css">
-  <link rel="stylesheet" href="./sass/main.css">
+  <link rel="stylesheet" href="./styles/main.css">
   <title>Portafolio</title>
 </head>
 
